[gd_scene load_steps=5 format=3 uid="uid://cs87j6ygdwi5x"]

[ext_resource type="Script" path="res://scenes/SessionHandler.gd" id="1_pw5j6"]
[ext_resource type="Texture2D" uid="uid://b20gq6upvbphf" path="res://assets/Big.png" id="2_34c2s"]
[ext_resource type="Texture2D" uid="uid://bag43a1cot83d" path="res://assets/HOVERED.png" id="3_nwas0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_034ow"]
texture = ExtResource("3_nwas0")

[node name="SessionHandler" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pw5j6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -784.0
offset_top = -368.0
offset_right = 1504.0
offset_bottom = 816.0
texture = ExtResource("2_34c2s")

[node name="MainLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 640.0
offset_bottom = 151.0
text = "Ingresar RUT del usuario inscrito en la universidad."

[node name="ProfileImg" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 704.0
offset_top = 128.0
offset_right = 832.0
offset_bottom = 256.0

[node name="Debug_nombreUsuario" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="user_rut" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 256.0
offset_top = 176.0
offset_right = 448.0
offset_bottom = 207.0
placeholder_text = "ejemplo: 12345678-9"

[node name="insertRUT" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 464.0
offset_top = 176.0
offset_right = 520.0
offset_bottom = 208.0
theme_override_styles/hover = SubResource("StyleBoxTexture_034ow")
theme_override_styles/pressed = SubResource("StyleBoxTexture_034ow")
theme_override_styles/focus = SubResource("StyleBoxTexture_034ow")

[node name="GuestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 296.0
offset_right = 427.0
offset_bottom = 328.0
theme_override_styles/hover = SubResource("StyleBoxTexture_034ow")
theme_override_styles/pressed = SubResource("StyleBoxTexture_034ow")
theme_override_styles/focus = SubResource("StyleBoxTexture_034ow")
text = "Entrar como invitado"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 352.0
offset_right = 448.0
offset_bottom = 383.0
placeholder_text = "Nombre invitado"

[node name="EnterGuestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 352.0
offset_right = 536.0
offset_bottom = 384.0
theme_override_styles/normal = SubResource("StyleBoxTexture_034ow")
theme_override_styles/hover = SubResource("StyleBoxTexture_034ow")
theme_override_styles/pressed = SubResource("StyleBoxTexture_034ow")
theme_override_styles/focus = SubResource("StyleBoxTexture_034ow")
text = "Enter"

[node name="SimularTarjeta" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1008.0
offset_top = 16.0
offset_right = 1136.0
offset_bottom = 104.0

[node name="IfError" type="Label" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 256.0
offset_right = 296.0
offset_bottom = 279.0

[node name="EsperandoRespuesta" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 256.0
offset_top = 216.0
offset_right = 515.0
offset_bottom = 239.0
text = "Esperando respuesta del servidor"

[node name="BackToMainMenu" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 896.0
offset_top = 24.0
offset_right = 1092.0
offset_bottom = 64.0
theme_override_styles/hover = SubResource("StyleBoxTexture_034ow")
theme_override_styles/pressed = SubResource("StyleBoxTexture_034ow")
theme_override_styles/focus = SubResource("StyleBoxTexture_034ow")
text = "Volver al men√∫ principal"

[connection signal="pressed" from="insertRUT" to="." method="_on_insert_rut_pressed"]
[connection signal="pressed" from="GuestButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GuestButton" to="." method="_on_guest_entering"]
[connection signal="pressed" from="EnterGuestButton" to="." method="_on_enter_guest"]
[connection signal="pressed" from="SimularTarjeta" to="." method="_on_simular_tarjeta"]
[connection signal="pressed" from="BackToMainMenu" to="." method="_on_back_to_main_menu_pressed"]
